--- a/src/libft/Makefile
+++ b/src/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: chanwjeo <chanwjeo@student.42seoul.kr>     +#+  +:+       +#+         #
+#    By: kko <kko@student.42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/16 15:31:26 by chanwjeo          #+#    #+#              #
-#    Updated: 2022/11/21 17:35:02 by chanwjeo         ###   ########.fr        #
+#    Updated: 2023/01/16 09:56:04 by kko              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
