--- a/src/mlx/Makefile
+++ b/src/mlx/Makefile
@@ -6,13 +6,13 @@
 #    By: sunhwang <sunhwang@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/18 20:49:21 by sunhwang          #+#    #+#              #
-#    Updated: 2023/01/18 21:04:00 by sunhwang         ###   ########.fr        #
+#    Updated: 2023/01/19 20:58:11 by sunhwang         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= libmlx.dylib
 
-OBJ_DIR = obj/
+OBJ_DIR		= obj/
 
 MODULE_SRC	= mlx_image.swift mlx_window.swift mlx_init.swift
 MODULE_OBJ	= $(MODULE_SRC:%.swift=$(OBJ_DIR)%.swiftmodule)
@@ -22,34 +22,33 @@ OBJ			= $(SRC:%.swift=$(OBJ_DIR)%.o)
 
 C_SRC		= mlx_xpm.c mlx_png.c mlx_string_put.c
 C_OBJ		= $(C_SRC:%.c=$(OBJ_DIR)%.o)
-#CFLAGS		= -Wall -Wextra -Werror -O3
+CFLAGS		= -O3
 
-INC=-I.
+INC			= -Iobj
 
 all: $(NAME)
 
 $(NAME): $(MODULE_OBJ) $(OBJ) $(C_OBJ)
-	@swiftc $(OPTI) $(INC) -o $@ -emit-library $(OBJ) $(C_OBJ) -lz
-	# @mv *.o obj/
+	@swiftc $(OPTI) -o $@ -emit-library $(OBJ) $(C_OBJ) -lz
 	@echo "$(MAGENTA)╔══════════════════════════════════════════╗$(DEF_COLOR)"
 	@echo "$(MAGENTA)║        Minilibx compile finished.        ║$(DEF_COLOR)"
 	@echo "$(MAGENTA)╚══════════════════════════════════════════╝$(DEF_COLOR)"
 
-%.o: %.c
+$(C_OBJ): $(OBJ_DIR)%.o: %.c
 	@$(CC) $(CFLAGS) -c $< -o $@
 	@echo "$(MAGENTA)Compiling... \t$< $(DEF_COLOR)"
 
-%.o: %.swift
+$(OBJ): $(OBJ_DIR)%.o: %.swift
 	@swiftc $(OPTI) $(INC) -parse-as-library -c $< -o $@
 	@echo "$(MAGENTA)Compiling... \t$< $(DEF_COLOR)"
 
-%.swiftmodule: %.swift
+$(MODULE_OBJ): $(OBJ_DIR)%.swiftmodule: %.swift
+	@mkdir -p $(@D)
 	@swiftc $(OPTI) $(INC) -parse-as-library -c $< -o $@ -emit-module -module-name $(patsubst %.swift,%,$<) -module-link-name $(patsubst %.swift,%,$<)
 	@echo "$(MAGENTA)Compiling... \t$< $(DEF_COLOR)"
 
 clean:
-	@rm -rf obj
-	@rm -f $(NAME) $(OBJ) $(MODULE_OBJ) $(C_OBJ) *.swiftdoc *~
+	@$(RM) -r $(OBJ_DIR)
 	@echo "$(MAGENTA)MLX archive files has been deleted.$(DEF_COLOR)"
 
 # Colors
